VariationsService will not encrypt headers for seed fetches to flag URL.

VariationsService was modified so that If-None-Match headers are not
encrypted when sending to an HTTP URL if that URL was specified via the
--variations-server-url command line flag. Tests were also added for
the different cases where encryption should/should not be triggered.

Bug: 812343
Change-Id: I3e8dc021e70a1ec225349830b14e77087678763a
Reviewed-on: https://chromium-review.googlesource.com/922451
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Commit-Queue: Carlos IL <carlosil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538258}
Former-commit-id: dd06f17c50b043cfb2ba4c44e116af5b6e6cdb9f